# Pygasus-core

./: Readme.md  core.py  main.py  pyproject.toml
arch/: getArch.py
core/: core.py
cpuInfo/: getCPUInfo.py
sysInfo/: getSysInfo.py
