[tool.poetry]
name = "pygasus-core"
version = "0.1.0"
description = ""
authors = ["Кишинский Олег Викторович <oleg.kishinskiy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
psutil = "^5.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
